# muscriptor

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: pypi.yml
muscriptor/: events.py  main.py  server.py  soundfonts.py  transcription_model.py
muscriptor/models/: lm.py
muscriptor/modules/: streaming.py  transformer.py
muscriptor/tokenizer/: mt3.py
muscriptor/utils/: auralization.py  download.py
tests/: test_events.py  test_optimized_generation.py  test_strict_instruments.py  test_transcription_model.py  test_transformer.py
web/: package.json  vite.config.ts
web/src/: audio.ts
